Crash in HotSpot with jvm.dll+0x42b48 ciObjectFactory::create_new_metadata

XMLWordPrintable

    • b143
    • x86
    • windows_8
    • Verified

        FULL PRODUCT VERSION :
        java version "1.8.0_51"
        Java(TM) SE Runtime Environment (build 1.8.0_51-b16)
        Java HotSpot(TM) 64-Bit Server VM (build 25.51-b03, mixed mode)

        FULL OS VERSION :
        Windows 8.1 Version 6.3.9600

        A DESCRIPTION OF THE PROBLEM :
        1.8.0_51-b16 crashes when running test case. Does not crash if -Xint option used. Does not crash in 1.7.0_75-b13.

        THE PROBLEM WAS REPRODUCIBLE WITH -Xint FLAG: No

        THE PROBLEM WAS REPRODUCIBLE WITH -server FLAG: Yes

        REGRESSION. Last worked in version 7u75

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Download the test case using the following links.

        http://www.zelix.com/temp/ibg6fmjt1wyqb/Test.jar &
        http://www.zelix.com/temp/ibg6fmjt1wyqb/Test.txt.

        Run test case using 1.8.0_51-b16
        java -jar Test.jar Test.txt

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED OUTPUT:

        [2015.08.17 06:36:35] Zelix KlassMaster 7.1.0test0 - License #None
                              Bug demonstration only
                              No license - Bug demonstration purposes only.

                              Copyright 1997-2015 Zelix Pty Ltd (ABN 47 078 740 093)
                              All rights reserved
        [2015.08.17 06:36:35] Preprocessing ZKM Script file...
        [2015.08.17 06:36:35] Parsing ZKM Script file...
        [2015.08.17 06:36:35] Opening classes...
                              Opened 536 classes
        [2015.08.17 06:36:36] Terminating normally. See "ZKM_log.txt" for more detail.

        ACTUAL OUTPUT:

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x0000000073082b48, pid=2432, tid=1568

                           
        ERROR MESSAGES/STACK TRACES THAT OCCUR :
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x0000000073082b48, pid=2432, tid=1568
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0_51-b16) (build 1.8.0_51-b16)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.51-b03 mixed mode windows-amd64 compressed oops)
        # Problematic frame:
        # V [jvm.dll+0x42b48]
        #
        # Failed to write core dump. Minidumps are not enabled by default on client versions of Windows
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x0000000016db3800): JavaThread "C1 CompilerThread3" daemon [_thread_in_vm, id=1568, stack(0x00000000182c0000,0x00000000183c0000)]

        siginfo: ExceptionCode=0xc0000005, reading address 0xffffffffffffffff

        Registers:
        RAX=0x0000000016db3800, RBX=0x00000000019a4760, RCX=0x00000000019a4760, RDX=0x00000000019a4760
        RSP=0x00000000183be450, RBP=0x0000000016dd2510, RSI=0x00000000019a4760, RDI=0x0000000000000000
        R8 =0x204f80d6ffff0013, R9 =0x0000000000000000, R10=0x0000000016dd2740, R11=0x0000000018865e90
        R12=0x0000000016db3800, R13=0x0000000016dd2510, R14=0x00000000158dd250, R15=0x0000000000000000
        RIP=0x0000000073082b48, EFLAGS=0x0000000000010202

        Top of Stack: (sp=0x00000000183be450)
        0x00000000183be450: 00000000183be460 000000001a2cbc80
        0x00000000183be460: 00000000154a25c0 0000000016db3800
        0x00000000183be470: 0000000000000000 00000000158dd250
        0x00000000183be480: 0000000016dd2510 0000000016db3800
        0x00000000183be490: 0000000000000076 0000000073082ed9
        0x00000000183be4a0: 000000001886af40 00000000154a3920
        0x00000000183be4b0: 0000000000000000 0000000000000001
        0x00000000183be4c0: 00000000000000b8 00000000158dd250
        0x00000000183be4d0: 0000000016d9ddc0 00000000730811ab
        0x00000000183be4e0: 0000000000000001 0000000016db3800
        0x00000000183be4f0: 0000000018866b90 000000007306c47f
        0x00000000183be500: 0000000000000009 0000000000000000
        0x00000000183be510: 00000000000000b8 00000000158dd250
        0x00000000183be520: 000000001a2ccf60 00000000734585db
        0x00000000183be530: 0000000000000000 0000000000000001
        0x00000000183be540: 0000000018866b90 00000000158dd250

        Instructions: (pc=0x0000000073082b48)
        0x0000000073082b28: 00 48 8b da ff 15 be d8 58 00 44 0f b6 05 da e7
        0x0000000073082b38: 79 00 4c 8b e0 45 84 c0 74 39 4c 8b 03 48 8b cb
        0x0000000073082b48: 41 ff 50 08 84 c0 74 2b 83 7b 08 00 7e 25 0f b6
        0x0000000073082b58: 83 0e 01 00 00 c0 e8 03 a8 01 74 17 48 8b 03 48


        Register to memory mapping:

        RAX=0x0000000016db3800 is a thread
        RBX=0x00000000019a4760 is an unknown value
        RCX=0x00000000019a4760 is an unknown value
        RDX=0x00000000019a4760 is an unknown value
        RSP=0x00000000183be450 is pointing into the stack for thread: 0x0000000016db3800
        RBP=0x0000000016dd2510 is an unknown value
        RSI=0x00000000019a4760 is an unknown value
        RDI=0x0000000000000000 is an unknown value
        R8 =0x204f80d6ffff0013 is an unknown value
        R9 =0x0000000000000000 is an unknown value
        R10=0x0000000016dd2740 is an unknown value
        R11=0x0000000018865e90 is an unknown value
        R12=0x0000000016db3800 is a thread
        R13=0x0000000016dd2510 is an unknown value
        R14=0x00000000158dd250 is an unknown value
        R15=0x0000000000000000 is an unknown value


        Stack: [0x00000000182c0000,0x00000000183c0000], sp=0x00000000183be450, free space=1017k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0x42b48]
        V [jvm.dll+0x42ed9]
        V [jvm.dll+0x411ab]
        V [jvm.dll+0x4185db]
        V [jvm.dll+0x417ccc]
        V [jvm.dll+0x417ad5]
        V [jvm.dll+0x41381f]
        V [jvm.dll+0x416207]
        V [jvm.dll+0x4169cb]
        V [jvm.dll+0x4178e7]
        V [jvm.dll+0x417b48]
        V [jvm.dll+0x417f7b]
        V [jvm.dll+0x417ad5]
        V [jvm.dll+0x41381f]
        V [jvm.dll+0x416207]
        V [jvm.dll+0x4169cb]
        V [jvm.dll+0x4178e7]
        V [jvm.dll+0x417b48]
        V [jvm.dll+0x41381f]
        V [jvm.dll+0x416207]
        V [jvm.dll+0x416afd]
        V [jvm.dll+0x416ef2]
        V [jvm.dll+0x41bfe5]
        V [jvm.dll+0x41c0f0]
        V [jvm.dll+0x405f88]
        V [jvm.dll+0x4061f1]
        V [jvm.dll+0x4063b2]
        V [jvm.dll+0x406581]
        V [jvm.dll+0x40678f]
        V [jvm.dll+0xa43a2]
        V [jvm.dll+0xa4cdf]
        V [jvm.dll+0x2418a4]
        V [jvm.dll+0x29846a]
        C [msvcr100.dll+0x21d9f]
        C [msvcr100.dll+0x21e3b]
        C [KERNEL32.DLL+0x13d2]
        C [ntdll.dll+0x15454]


        Current CompileTask:
        C1: 1249 1852 3 test.cd::a (42 bytes)


        --------------- P R O C E S S ---------------

        Java Threads: ( => current thread )
          0x0000000016e1c000 JavaThread "Service Thread" daemon [_thread_blocked, id=6580, stack(0x00000000183c0000,0x00000000184c0000)]
        =>0x0000000016db3800 JavaThread "C1 CompilerThread3" daemon [_thread_in_vm, id=1568, stack(0x00000000182c0000,0x00000000183c0000)]
          0x0000000016dad000 JavaThread "C2 CompilerThread2" daemon [_thread_in_native, id=5664, stack(0x00000000181c0000,0x00000000182c0000)]
          0x0000000016daa800 JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=4788, stack(0x00000000180c0000,0x00000000181c0000)]
          0x0000000016da7000 JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=6684, stack(0x0000000017fc0000,0x00000000180c0000)]
          0x0000000016da6000 JavaThread "Attach Listener" daemon [_thread_blocked, id=7280, stack(0x0000000017ec0000,0x0000000017fc0000)]
          0x0000000016da4800 JavaThread "Signal Dispatcher" daemon [_thread_blocked, id=7404, stack(0x0000000017dc0000,0x0000000017ec0000)]
          0x00000000159fa000 JavaThread "Finalizer" daemon [_thread_blocked, id=7876, stack(0x0000000017cc0000,0x0000000017dc0000)]
          0x0000000001a4e800 JavaThread "Reference Handler" daemon [_thread_blocked, id=5240, stack(0x0000000017bc0000,0x0000000017cc0000)]
          0x0000000001950800 JavaThread "main" [_thread_in_Java, id=7928, stack(0x0000000001840000,0x0000000001940000)]

        Other Threads:
          0x00000000159ef000 VMThread [stack: 0x0000000017ac0000,0x0000000017bc0000] [id=4232]
          0x0000000016e1d000 WatcherThread [stack: 0x00000000184c0000,0x00000000185c0000] [id=1048]

        VM state:not at safepoint (normal execution)

        VM Mutex/Monitor currently owned by a thread: None

        Heap:
         PSYoungGen total 153088K, used 126373K [0x00000000eab00000, 0x00000000f5580000, 0x0000000100000000)
          eden space 131584K, 96% used [0x00000000eab00000,0x00000000f26695f8,0x00000000f2b80000)
          from space 21504K, 0% used [0x00000000f4080000,0x00000000f4080000,0x00000000f5580000)
          to space 21504K, 0% used [0x00000000f2b80000,0x00000000f2b80000,0x00000000f4080000)
         ParOldGen total 349696K, used 0K [0x00000000c0000000, 0x00000000d5580000, 0x00000000eab00000)
          object space 349696K, 0% used [0x00000000c0000000,0x00000000c0000000,0x00000000d5580000)
         Metaspace used 9009K, capacity 9567K, committed 9728K, reserved 1058816K
          class space used 1086K, capacity 1228K, committed 1280K, reserved 1048576K

        Card table byte_map: [0x0000000012400000,0x0000000012610000] byte_map_base: 0x0000000011e00000

        Marking Bits: (ParMarkBitMap*) 0x0000000073844040
         Begin Bits: [0x0000000012e10000, 0x0000000013e10000)
         End Bits: [0x0000000013e10000, 0x0000000014e10000)

        Polling page: 0x0000000001800000

        CodeCache: size=245760Kb used=6597Kb max_used=6613Kb free=239163Kb
         bounds [0x0000000003400000, 0x0000000003a80000, 0x0000000012400000]
         total_blobs=2203 nmethods=1840 adapters=276
         compilation: enabled

        Compilation events (10 events):
        Event: 1.220 Thread 0x0000000016db3800 nmethod 1848 0x0000000003a55250 code [0x0000000003a553c0, 0x0000000003a55648]
        Event: 1.220 Thread 0x0000000016db3800 1849 1 test.c0::C (2 bytes)
        Event: 1.220 Thread 0x0000000016db3800 nmethod 1849 0x0000000003a704d0 code [0x0000000003a70620, 0x0000000003a70730]
        Event: 1.220 Thread 0x0000000016db3800 1850 1 test.c0::F (5 bytes)
        Event: 1.220 Thread 0x0000000016db3800 nmethod 1850 0x0000000003a70790 code [0x0000000003a708e0, 0x0000000003a709f0]
        Event: 1.220 Thread 0x0000000016db3800 1851 3 test.l6::a (194 bytes)
        Event: 1.221 Thread 0x0000000016da7000 nmethod 1824 0x0000000003a70a50 code [0x0000000003a70ce0, 0x0000000003a72830]
        Event: 1.221 Thread 0x0000000016da7000 1831 % 4 test.lv::a @ 664 (764 bytes)
        Event: 1.223 Thread 0x0000000016db3800 nmethod 1851 0x0000000003a6a290 code [0x0000000003a6a6a0, 0x0000000003a6cc08]
        Event: 1.223 Thread 0x0000000016db3800 1852 3 test.cd::a (42 bytes)

        GC Heap History (0 events):
        No events

        Deoptimization events (10 events):
        Event: 1.090 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x000000000380b124 method=java.util.HashMap.getNode(ILjava/lang/Object;)Ljava/util/HashMap$Node; @ 126
        Event: 1.095 Thread 0x0000000001950800 Uncommon trap: reason=unstable_if action=reinterpret pc=0x0000000003963918 method=test.m6.a(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; @ 20
        Event: 1.097 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x0000000003852db4 method=java.util.HashMap.getNode(ILjava/lang/Object;)Ljava/util/HashMap$Node; @ 126
        Event: 1.109 Thread 0x0000000001950800 Uncommon trap: reason=unstable_if action=reinterpret pc=0x0000000003700070 method=java.util.concurrent.ConcurrentHashMap.get(Ljava/lang/Object;)Ljava/lang/Object; @ 76
        Event: 1.109 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x000000000382e5fc method=java.util.HashMap.putVal(ILjava/lang/Object;Ljava/lang/Object;ZZ)Ljava/lang/Object; @ 203
        Event: 1.109 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x000000000382e5fc method=java.util.HashMap.putVal(ILjava/lang/Object;Ljava/lang/Object;ZZ)Ljava/lang/Object; @ 203
        Event: 1.110 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x000000000382e5fc method=java.util.HashMap.putVal(ILjava/lang/Object;Ljava/lang/Object;ZZ)Ljava/lang/Object; @ 203
        Event: 1.110 Thread 0x0000000001950800 Uncommon trap: reason=bimorphic action=maybe_recompile pc=0x000000000381a574 method=java.util.HashMap.putVal(ILjava/lang/Object;Ljava/lang/Object;ZZ)Ljava/lang/Object; @ 203
        Event: 1.135 Thread 0x0000000001950800 Uncommon trap: reason=unstable_if action=reinterpret pc=0x00000000038473e4 method=java.util.ArrayList.<init>(I)V @ 5
        Event: 1.136 Thread 0x0000000001950800 Uncommon trap: reason=unstable_if action=reinterpret pc=0x000000000397eddc method=test.az.a(Ljava/lang/String;ZZ)Ljava/lang/String; @ 159

        Internal exceptions (10 events):
        Event: 0.076 Thread 0x0000000001950800 Exception <a 'java/lang/NoSuchMethodError': Method sun.misc.Unsafe.prefetchRead(Ljava/lang/Object;J)V name or signature does not match> (0x00000000eab0f4e0) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\j³…YåGnÍ?
        Event: 0.230 Thread 0x0000000001950800 Exception <a 'java/lang/NoSuchFieldError': method resolution failed> (0x00000000eacd63d0) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\methodHandles.cpp, line 1125]
        Event: 0.231 Thread 0x0000000001950800 Exception <a 'java/lang/NoSuchFieldError': method resolution failed> (0x00000000eace4a70) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\methodHandles.cpp, line 1125]
        Event: 0.314 Thread 0x0000000001950800 Implicit null exception at 0x00000000035d1e53 to 0x00000000035d21e5
        Event: 0.473 Thread 0x0000000001950800 Exception <a 'java/security/PrivilegedActionException'> (0x00000000ed437978) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\jvm.cpp, line 1382]
        Event: 0.474 Thread 0x0000000001950800 Exception <a 'java/security/PrivilegedActionException'> (0x00000000ed437cc0) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\jvm.cpp, line 1382]
        Event: 0.474 Thread 0x0000000001950800 Exception <a 'java/security/PrivilegedActionException'> (0x00000000ed43a3f8) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\jvm.cpp, line 1382]
        Event: 0.474 Thread 0x0000000001950800 Exception <a 'java/security/PrivilegedActionException'> (0x00000000ed43a740) thrown at [C:\re\workspace\8-2-build-windows-amd64-cygwin\jdk8u51\3951\hotspot\src\share\vm\prims\jvm.cpp, line 1382]
        Event: 0.615 Thread 0x0000000001950800 Implicit null exception at 0x00000000035d1ab0 to 0x00000000035d1afd
        Event: 1.089 Thread 0x0000000001950800 Implicit null exception at 0x00000000038768ad to 0x0000000003876b52

        Events (10 events):
        Event: 1.204 loading class test/lv
        Event: 1.204 loading class test/lv done
        Event: 1.211 loading class test/cd
        Event: 1.211 loading class test/cd done
        Event: 1.212 loading class test/cd
        Event: 1.212 loading class test/cd done
        Event: 1.212 loading class test/c0
        Event: 1.212 loading class test/c0 done
        Event: 1.212 loading class test/dc
        Event: 1.212 loading class test/dc done


        Dynamic libraries:
        0x00007ff6c8ad0000 - 0x00007ff6c8b07000 C:\JDK\jdk1.8.0\bin\java.exe
        0x00007ffaa8490000 - 0x00007ffaa863c000 C:\WINDOWS\SYSTEM32\ntdll.dll
        0x00007ffaa5b80000 - 0x00007ffaa5cbe000 C:\WINDOWS\system32\KERNEL32.DLL
        0x00007ffaa5720000 - 0x00007ffaa5835000 C:\WINDOWS\system32\KERNELBASE.dll
        0x00007ffaa4150000 - 0x00007ffaa41de000 C:\WINDOWS\system32\apphelp.dll
        0x00007ffa9fac0000 - 0x00007ffa9fb13000 C:\WINDOWS\AppPatch\AppPatch64\AcGenral.DLL
        0x00007ffaa76e0000 - 0x00007ffaa778a000 C:\WINDOWS\system32\msvcrt.dll
        0x00007ffaa5420000 - 0x00007ffaa544e000 C:\WINDOWS\SYSTEM32\SspiCli.dll
        0x00007ffaa8080000 - 0x00007ffaa80d4000 C:\WINDOWS\system32\SHLWAPI.dll
        0x00007ffaa7e20000 - 0x00007ffaa7f97000 C:\WINDOWS\system32\USER32.dll
        0x00007ffaa79b0000 - 0x00007ffaa7b44000 C:\WINDOWS\system32\ole32.dll
        0x00007ffaa5cc0000 - 0x00007ffaa71d9000 C:\WINDOWS\system32\SHELL32.dll
        0x00007ffaa4bf0000 - 0x00007ffaa4c11000 C:\WINDOWS\SYSTEM32\USERENV.dll
        0x00007ffaa7c20000 - 0x00007ffaa7cca000 C:\WINDOWS\system32\ADVAPI32.dll
        0x00007ffa9d5f0000 - 0x00007ffa9d60e000 C:\WINDOWS\SYSTEM32\MPR.dll
        0x00007ffaa7cd0000 - 0x00007ffaa7e11000 C:\WINDOWS\system32\RPCRT4.dll
        0x00007ffaa5b20000 - 0x00007ffaa5b79000 C:\WINDOWS\SYSTEM32\sechost.dll
        0x00007ffaa7790000 - 0x00007ffaa79a1000 C:\WINDOWS\SYSTEM32\combase.dll
        0x00007ffaa74b0000 - 0x00007ffaa7600000 C:\WINDOWS\system32\GDI32.dll
        0x00007ffaa55f0000 - 0x00007ffaa5605000 C:\WINDOWS\SYSTEM32\profapi.dll
        0x00007ffaa3c00000 - 0x00007ffaa3cb2000 C:\WINDOWS\SYSTEM32\SHCORE.dll
        0x00007ffaa7240000 - 0x00007ffaa7276000 C:\WINDOWS\system32\IMM32.DLL
        0x00007ffaa7280000 - 0x00007ffaa73d2000 C:\WINDOWS\system32\MSCTF.dll
        0x00007ffaa36c0000 - 0x00007ffaa393a000 C:\WINDOWS\WinSxS\amd64_microsoft.windows.common-controls_6595b64144ccf1df_6.0.9600.17810_none_6240b9c7ecbd0bda\COMCTL32.dll
        0x00000000743d0000 - 0x00000000744a2000 C:\JDK\jdk1.8.0\jre\bin\msvcr100.dll
        0x0000000073040000 - 0x00000000738c3000 C:\JDK\jdk1.8.0\jre\bin\server\jvm.dll
        0x00007ffaa23a0000 - 0x00007ffaa23a9000 C:\WINDOWS\SYSTEM32\WSOCK32.dll
        0x00007ffaa1b70000 - 0x00007ffaa1b92000 C:\WINDOWS\SYSTEM32\WINMM.dll
        0x00007ffaa2390000 - 0x00007ffaa239a000 C:\WINDOWS\SYSTEM32\VERSION.dll
        0x00007ffaa76d0000 - 0x00007ffaa76d7000 C:\WINDOWS\system32\PSAPI.DLL
        0x00007ffaa7b50000 - 0x00007ffaa7baa000 C:\WINDOWS\system32\WS2_32.dll
        0x00007ffaa1b00000 - 0x00007ffaa1b2a000 C:\WINDOWS\SYSTEM32\WINMMBASE.dll
        0x00007ffaa8480000 - 0x00007ffaa8489000 C:\WINDOWS\system32\NSI.dll
        0x00007ffaa5840000 - 0x00007ffaa588f000 C:\WINDOWS\SYSTEM32\cfgmgr32.dll
        0x00007ffaa43a0000 - 0x00007ffaa43c8000 C:\WINDOWS\SYSTEM32\DEVOBJ.dll
        0x00000000743c0000 - 0x00000000743cf000 C:\JDK\jdk1.8.0\jre\bin\verify.dll
        0x0000000074390000 - 0x00000000743b9000 C:\JDK\jdk1.8.0\jre\bin\java.dll
        0x0000000074370000 - 0x0000000074386000 C:\JDK\jdk1.8.0\jre\bin\zip.dll
        0x00007ffaa4ec0000 - 0x00007ffaa4ee0000 C:\WINDOWS\SYSTEM32\CRYPTSP.dll
        0x00007ffaa4ae0000 - 0x00007ffaa4b16000 C:\WINDOWS\system32\rsaenh.dll
        0x00007ffaa5110000 - 0x00007ffaa5136000 C:\WINDOWS\SYSTEM32\bcrypt.dll
        0x00007ffaa5450000 - 0x00007ffaa54b3000 C:\WINDOWS\system32\bcryptprimitives.dll
        0x00007ffaa54c0000 - 0x00007ffaa54cb000 C:\WINDOWS\SYSTEM32\CRYPTBASE.dll
        0x0000000074350000 - 0x000000007436a000 C:\JDK\jdk1.8.0\jre\bin\net.dll
        0x00007ffaa4e60000 - 0x00007ffaa4eb9000 C:\WINDOWS\system32\mswsock.dll
        0x00007ffa9eee0000 - 0x00007ffa9ef0a000 C:\WINDOWS\SYSTEM32\IPHLPAPI.DLL
        0x00007ffa9eed0000 - 0x00007ffa9eeda000 C:\WINDOWS\SYSTEM32\WINNSI.DLL
        0x00007ffa9ea60000 - 0x00007ffa9ea76000 C:\WINDOWS\SYSTEM32\dhcpcsvc6.DLL
        0x00007ffa9ea40000 - 0x00007ffa9ea5a000 C:\WINDOWS\SYSTEM32\dhcpcsvc.DLL
        0x0000000073020000 - 0x0000000073031000 C:\JDK\jdk1.8.0\jre\bin\nio.dll
        0x00007ffaa02e0000 - 0x00007ffaa0469000 C:\WINDOWS\SYSTEM32\dbghelp.dll

        VM Arguments:
        jvm_args: -XX:-FailOverToOldVerifier -Xmx1024m -Xverify:all
        java_command: Test.jar Test.txt
        java_class_path (initial): Test.jar
        Launcher Type: SUN_STANDARD

        Environment Variables:
        PATH=D:\Java\apache-maven-3.2.3\bin;C:\ProgramData\Oracle\Java\javapath;c:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;C:\Program Files (x86)\Intel\iCLS Client\;C:\Program Files\Intel\iCLS Client\;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files (x86)\Common Files\Acronis\SnapAPI\;D:\Bat;C:\Program Files (x86)\Common Files\Adobe\AGL;D:\Gradle\gradle-2.3\bin;C:\Program Files (x86)\Git\cmd;C:\Program Files (x86)\QuickTime\QTSystem\
        USERNAME=Svet
        OS=Windows_NT
        PROCESSOR_IDENTIFIER=Intel64 Family 6 Model 58 Stepping 9, GenuineIntel



        --------------- S Y S T E M ---------------

        OS: Windows 8.1 , 64 bit Build 9600 (6.3.9600.17415)

        CPU:total 8 (4 cores per cpu, 2 threads per core) family 6 model 58 stepping 9, cmov, cx8, fxsr, mmx, sse, sse2, sse3, ssse3, sse4.1, sse4.2, popcnt, avx, aes, clmul, erms, ht, tsc, tscinvbit, tscinv

        Memory: 4k page, physical 33492460k(29155776k free), swap 38473196k(33045660k free)

        vm_info: Java HotSpot(TM) 64-Bit Server VM (25.51-b03) for windows-amd64 JRE (1.8.0_51-b16), built on Jun 8 2015 18:03:07 by "java_re" with MS VC++ 10.0 (VS2010)

        time: Mon Aug 17 06:33:15 2015
        elapsed time: 1 seconds (0d 0h 0m 1s)



        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        Test bytecode was generated by a utility so there is no direct source code.
        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        Use the -Xint option or Java 7.

          1. hs_err_pid8276.log
            24 kB
          2. replay_pid8276.log
            107 kB
          3. Test0.7z
            359 kB
          4. ZKM_log.txt
            0.9 kB

              Assignee:
              Jamsheed C M (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: